--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "build/main.js",
   "scripts": {
+    "start": "cd build && node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
