npm script for build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "build/main.js",
   "scripts": {
     "start": "cd build && node main.js",
+    "build": "gulp"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
