--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "build/main.js",
   "scripts": {
     "start": "cd build && node main.js",
-    "build": "gulp"
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,8 +17,8 @@
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
-    "@types/node": "^7.0.12",
     "gulp": "^3.9.1",
+    "gulp-cli": "^1.2.2",
     "gulp-file-include": "^1.1.0",
     "gulp-typescript": "^3.1.6",
     "typescript": "^2.2.2"
